--- a/collate_data/style_vectors.ipynb
+++ b/collate_data/style_vectors.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Data from the 450 million word Corpus of Contemporary American English (COCA), length = 100\n",
-    "most_common_english = ['the', 'to', 'and', 'of', 'a', 'in', 'i', 'that', 'you', 'it', 'is',\n",
+    "common = ['the', 'to', 'and', 'of', 'a', 'in', 'i', 'that', 'you', 'it', 'is',\n",
     "                       'for', 'on', 'was', 'he', 'with', 'this', 'as', \"n't\", 'we', 'be',\n",
     "                       'have', 'are', 'not', 'but', 'at', 'they', 'do', 'what', 'his', 'from', \n",
     "                       'by', 'or', 'she', 'my', 'all', 'an', 'there', 'so', 'her', 'about',\n",
@@ -55,12 +55,24 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2f0d498b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_common = {}\n",
+    "for i, word in enumerate(common):\n",
+    "    map_common[word] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "ab0e4238",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function word list pulled from James O’Shea's research on dialogue act classification, length = 277\n",
-    "english_function = [\"a\", \"about\", \"above\", \"across\", \"after\", \"afterwards\", \"again\", \"against\", \n",
+    "function = [\"a\", \"about\", \"above\", \"across\", \"after\", \"afterwards\", \"again\", \"against\", \n",
     "                    \"all\", \"almost\", \"alone\", \"along\", \"already\", \"also\", \"although\", \"always\", \n",
     "                    \"am\", \"among\", \"amongst\", \"amoungst\", \"an\", \"and\", \"another\", \"any\", \"anyhow\", \n",
     "                    \"anyone\", \"anything\", \"anyway\", \"anywhere\", \"are\", \"around\", \"as\", \"at\", \n",
@@ -97,88 +109,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "80620c82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_text(text, allowed_words):\n",
-    "    # Remove punctuation and newline characters, convert to lowercase\n",
-    "    translator = str.maketrans(\"\", \"\", string.punctuation)\n",
-    "    text = text.translate(translator).replace('\\n', ' ').lower()\n",
-    "    \n",
-    "    # Keep only words that are in the allowed list\n",
-    "    processed_text = ' '.join(word for word in text.split() if word in allowed_words)\n",
-    "    return processed_text"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "54a87d3c",
+   "id": "c4b9a605",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"processed_common\"] = df[\"response\"].apply(lambda x: process_text(x, most_common_english))\n",
-    "df[\"processed_function\"] = df[\"response\"].apply(lambda x: process_text(x, english_function))"
+    "map_function = {}\n",
+    "for i, word in enumerate(function):\n",
+    "    map_function[word] = i"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ed2d34ac",
+   "id": "55b64769",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = CountVectorizer()"
+    "r = r\"(?u)\\b[\\w']*+\\b\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c89dfc4d",
+   "id": "4d50d860",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtm = vectorizer.fit_transform(df['processed_function'])\n",
-    "\n",
-    "dtm_df = pd.DataFrame(dtm.toarray(), columns=vectorizer.get_feature_names_out())\n",
-    "\n",
-    "function_df = pd.concat([df, dtm_df], axis=1)\n",
-    "\n",
-    "\n",
-    "exclude_columns = function_df.columns[:6]\n",
-    "function_df = pd.DataFrame({\n",
-    "    'prompt': function_df.prompt,\n",
-    "    'response': function_df.response,\n",
-    "    'SummaryVector': function_df.apply(lambda row: row[~row.index.isin(exclude_columns)].values.tolist(), axis=1)\n",
-    "})"
+    "common_vectorizer = CountVectorizer(token_pattern=r, vocabulary = map_common)\n",
+    "function_vectorizer = CountVectorizer(token_pattern=r, vocabulary = map_function)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6c2105c6",
+   "id": "53d7e2b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtm = vectorizer.fit_transform(df['processed_common'])\n",
+    "dtm = common_vectorizer.fit_transform(df['response'])\n",
     "\n",
-    "dtm_df = pd.DataFrame(dtm.toarray(), columns=vectorizer.get_feature_names_out())\n",
+    "dtm_df = pd.DataFrame(dtm.toarray(), columns=common_vectorizer.get_feature_names_out())\n",
     "\n",
-    "common_df = pd.concat([df, dtm_df], axis=1)\n",
-    "\n",
-    "exclude_columns = common_df.columns[:6]\n",
-    "common_df = pd.DataFrame({\n",
-    "    'prompt': common_df.prompt,\n",
-    "    'response': common_df.response,\n",
-    "    'SummaryVector': common_df.apply(lambda row: row[~row.index.isin(exclude_columns)].values.tolist(), axis=1)\n",
-    "})"
+    "common = dtm_df.apply(lambda row: row.values.tolist(), axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "d7a7a159",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtm = function_vectorizer.fit_transform(df['response'])\n",
+    "\n",
+    "dtm_df = pd.DataFrame(dtm.toarray(), columns=function_vectorizer.get_feature_names_out())\n",
+    "\n",
+    "function = dtm_df.apply(lambda row: row.values.tolist(), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "35cf0965",
    "metadata": {},
    "outputs": [
@@ -205,8 +197,8 @@
        "      <th></th>\n",
        "      <th>prompt</th>\n",
        "      <th>response</th>\n",
-       "      <th>common_vectors</th>\n",
-       "      <th>function_vectors</th>\n",
+       "      <th>common</th>\n",
+       "      <th>function</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -214,36 +206,36 @@
        "      <th>0</th>\n",
        "      <td>Respond to the following creative writing prom...</td>\n",
        "      <td>In the shadowy realm where space and time inte...</td>\n",
-       "      <td>[0, 2, 13, 1, 6, 1, 1, 2, 0, 1, 0, 0, 1, 3, 0,...</td>\n",
-       "      <td>[1, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...</td>\n",
+       "      <td>[51, 7, 13, 27, 20, 12, 17, 10, 0, 4, 3, 4, 0,...</td>\n",
+       "      <td>[20, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Respond to the following creative writing prom...</td>\n",
        "      <td>In the clandestine world of time travel, where...</td>\n",
-       "      <td>[0, 2, 17, 0, 10, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0...</td>\n",
-       "      <td>[0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...</td>\n",
+       "      <td>[32, 13, 17, 24, 20, 7, 10, 3, 0, 1, 0, 4, 2, ...</td>\n",
+       "      <td>[20, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond to the following creative writing prom...</td>\n",
        "      <td>In the year 2342, time travel had become a pop...</td>\n",
-       "      <td>[0, 2, 17, 0, 8, 0, 0, 0, 0, 1, 1, 3, 0, 0, 0,...</td>\n",
-       "      <td>[1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[22, 5, 17, 8, 12, 3, 10, 1, 0, 0, 0, 5, 2, 5,...</td>\n",
+       "      <td>[12, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Respond to the following creative writing prom...</td>\n",
        "      <td>In the intricate labyrinth of time, where mome...</td>\n",
-       "      <td>[0, 6, 11, 0, 7, 0, 0, 0, 0, 0, 2, 3, 0, 2, 0,...</td>\n",
-       "      <td>[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[42, 12, 11, 29, 10, 12, 13, 6, 0, 2, 0, 2, 1,...</td>\n",
+       "      <td>[10, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Respond to the following creative writing prom...</td>\n",
        "      <td>In the realm of temporal anomalies and audacio...</td>\n",
-       "      <td>[0, 0, 24, 0, 7, 1, 0, 1, 0, 0, 2, 0, 0, 1, 0,...</td>\n",
-       "      <td>[0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, ...</td>\n",
+       "      <td>[58, 15, 24, 37, 20, 14, 12, 5, 0, 0, 1, 3, 3,...</td>\n",
+       "      <td>[20, 0, 0, 0, 0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -256,36 +248,36 @@
        "      <th>795</th>\n",
        "      <td>To get in Heaven, you have to confront the per...</td>\n",
        "      <td>In the hushed tranquility of the celestial rea...</td>\n",
-       "      <td>[1, 2, 14, 0, 1, 0, 0, 1, 0, 3, 4, 0, 0, 0, 0,...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[23, 11, 14, 9, 9, 6, 21, 7, 0, 5, 0, 4, 0, 6,...</td>\n",
+       "      <td>[9, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>796</th>\n",
        "      <td>To get in Heaven, you have to confront the per...</td>\n",
        "      <td>As I arrived at the pearly gates of Heaven, my...</td>\n",
-       "      <td>[0, 2, 13, 0, 7, 2, 2, 1, 0, 2, 2, 0, 0, 0, 0,...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[23, 16, 14, 7, 12, 6, 36, 3, 2, 3, 0, 2, 1, 5...</td>\n",
+       "      <td>[12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>797</th>\n",
        "      <td>To get in Heaven, you have to confront the per...</td>\n",
        "      <td>In the ethereal realm, where clouds caressed t...</td>\n",
-       "      <td>[0, 3, 8, 0, 6, 0, 1, 1, 0, 1, 4, 3, 0, 1, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...</td>\n",
+       "      <td>[24, 8, 8, 16, 7, 11, 27, 13, 0, 4, 0, 4, 1, 8...</td>\n",
+       "      <td>[7, 3, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>798</th>\n",
        "      <td>To get in Heaven, you have to confront the per...</td>\n",
        "      <td>In the ethereal realm of the afterlife, I stoo...</td>\n",
-       "      <td>[2, 2, 25, 0, 6, 1, 2, 4, 0, 5, 6, 0, 0, 0, 0,...</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[23, 10, 25, 14, 10, 12, 35, 10, 0, 3, 0, 4, 1...</td>\n",
+       "      <td>[10, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 2, 0,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799</th>\n",
        "      <td>To get in Heaven, you have to confront the per...</td>\n",
        "      <td>In the vast expanse of the afterlife, I found ...</td>\n",
-       "      <td>[0, 1, 14, 0, 4, 2, 3, 4, 0, 5, 2, 0, 0, 1, 0,...</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, ...</td>\n",
+       "      <td>[22, 9, 14, 11, 5, 7, 39, 12, 0, 5, 0, 7, 4, 5...</td>\n",
+       "      <td>[5, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -319,46 +311,46 @@
        "798  In the ethereal realm of the afterlife, I stoo...   \n",
        "799  In the vast expanse of the afterlife, I found ...   \n",
        "\n",
-       "                                        common_vectors  \\\n",
-       "0    [0, 2, 13, 1, 6, 1, 1, 2, 0, 1, 0, 0, 1, 3, 0,...   \n",
-       "1    [0, 2, 17, 0, 10, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0...   \n",
-       "2    [0, 2, 17, 0, 8, 0, 0, 0, 0, 1, 1, 3, 0, 0, 0,...   \n",
-       "3    [0, 6, 11, 0, 7, 0, 0, 0, 0, 0, 2, 3, 0, 2, 0,...   \n",
-       "4    [0, 0, 24, 0, 7, 1, 0, 1, 0, 0, 2, 0, 0, 1, 0,...   \n",
+       "                                                common  \\\n",
+       "0    [51, 7, 13, 27, 20, 12, 17, 10, 0, 4, 3, 4, 0,...   \n",
+       "1    [32, 13, 17, 24, 20, 7, 10, 3, 0, 1, 0, 4, 2, ...   \n",
+       "2    [22, 5, 17, 8, 12, 3, 10, 1, 0, 0, 0, 5, 2, 5,...   \n",
+       "3    [42, 12, 11, 29, 10, 12, 13, 6, 0, 2, 0, 2, 1,...   \n",
+       "4    [58, 15, 24, 37, 20, 14, 12, 5, 0, 0, 1, 3, 3,...   \n",
        "..                                                 ...   \n",
-       "795  [1, 2, 14, 0, 1, 0, 0, 1, 0, 3, 4, 0, 0, 0, 0,...   \n",
-       "796  [0, 2, 13, 0, 7, 2, 2, 1, 0, 2, 2, 0, 0, 0, 0,...   \n",
-       "797  [0, 3, 8, 0, 6, 0, 1, 1, 0, 1, 4, 3, 0, 1, 0, ...   \n",
-       "798  [2, 2, 25, 0, 6, 1, 2, 4, 0, 5, 6, 0, 0, 0, 0,...   \n",
-       "799  [0, 1, 14, 0, 4, 2, 3, 4, 0, 5, 2, 0, 0, 1, 0,...   \n",
+       "795  [23, 11, 14, 9, 9, 6, 21, 7, 0, 5, 0, 4, 0, 6,...   \n",
+       "796  [23, 16, 14, 7, 12, 6, 36, 3, 2, 3, 0, 2, 1, 5...   \n",
+       "797  [24, 8, 8, 16, 7, 11, 27, 13, 0, 4, 0, 4, 1, 8...   \n",
+       "798  [23, 10, 25, 14, 10, 12, 35, 10, 0, 3, 0, 4, 1...   \n",
+       "799  [22, 9, 14, 11, 5, 7, 39, 12, 0, 5, 0, 7, 4, 5...   \n",
        "\n",
-       "                                      function_vectors  \n",
-       "0    [1, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...  \n",
-       "1    [0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...  \n",
-       "2    [1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "3    [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "4    [0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, ...  \n",
+       "                                              function  \n",
+       "0    [20, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0,...  \n",
+       "1    [20, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,...  \n",
+       "2    [12, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,...  \n",
+       "3    [10, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,...  \n",
+       "4    [20, 0, 0, 0, 0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 0,...  \n",
        "..                                                 ...  \n",
-       "795  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, ...  \n",
-       "796  [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "797  [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...  \n",
-       "798  [0, 0, 0, 0, 1, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, ...  \n",
-       "799  [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, ...  \n",
+       "795  [9, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...  \n",
+       "796  [12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...  \n",
+       "797  [7, 3, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...  \n",
+       "798  [10, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 2, 0,...  \n",
+       "799  [5, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...  \n",
        "\n",
        "[800 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gemini_style_vectors = pd.DataFrame({\n",
-    "    'prompt': common_df.prompt,\n",
-    "    'response': common_df.response,\n",
-    "    'common_vectors': common_df.SummaryVector,\n",
-    "    'function_vectors': function_df.SummaryVector\n",
+    "    'prompt': df.prompt,\n",
+    "    'response': df.response,\n",
+    "    'common': common,\n",
+    "    'function': function\n",
     "})\n",
     "\n",
     "gemini_style_vectors"
@@ -366,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "93a02dd9",
    "metadata": {},
    "outputs": [],
