fixed data.csv, gemini cf was wrong

--- a/collate_data/gemini.ipynb
+++ b/collate_data/gemini.ipynb
@@ -382,24 +382,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response</th>\n",
+       "      <th>bert</th>\n",
+       "      <th>roberta</th>\n",
+       "      <th>opt</th>\n",
+       "      <th>llama</th>\n",
+       "      <th>common</th>\n",
+       "      <th>function</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>reddit</td>\n",
+       "      <td>Killing Hitler has become a sport amongst time...</td>\n",
+       "      <td>* Magnificient work ! Truly inspiring ! * Hein...</td>\n",
+       "      <td>[-0.006725453305989504, 0.23576399683952332, -...</td>\n",
+       "      <td>[-0.04180792719125748, 0.040072135627269745, -...</td>\n",
+       "      <td>[-0.7724277377128601, -1.4468441009521484, -3....</td>\n",
+       "      <td>[2.265625, 0.82666015625, 0.69775390625, 0.782...</td>\n",
+       "      <td>[4, 3, 5, 1, 4, 3, 6, 0, 0, 0, 0, 1, 0, 1, 1, ...</td>\n",
+       "      <td>[4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>reddit</td>\n",
+       "      <td>Killing Hitler has become a sport amongst time...</td>\n",
+       "      <td>Even by my standards this one took some work ....</td>\n",
+       "      <td>[0.07968071103096008, -0.020308567211031914, 0...</td>\n",
+       "      <td>[-0.02620106004178524, 0.02632817253470421, -0...</td>\n",
+       "      <td>[-0.11295819282531738, -1.027052640914917, -2....</td>\n",
+       "      <td>[0.9736328125, -2.439453125, 1.4921875, -0.757...</td>\n",
+       "      <td>[8, 6, 6, 2, 4, 3, 7, 0, 0, 1, 0, 1, 0, 4, 2, ...</td>\n",
+       "      <td>[4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>reddit</td>\n",
+       "      <td>Killing Hitler has become a sport amongst time...</td>\n",
+       "      <td>So , we can now time travel into the future . ...</td>\n",
+       "      <td>[-0.12700289487838745, 0.3927253186702728, -0....</td>\n",
+       "      <td>[-0.04244694486260414, 0.010937012732028961, -...</td>\n",
+       "      <td>[-5.222697734832764, -2.8652701377868652, -3.3...</td>\n",
+       "      <td>[0.06005859375, -1.708984375, -0.457275390625,...</td>\n",
+       "      <td>[8, 5, 2, 2, 1, 3, 5, 2, 0, 2, 0, 0, 0, 3, 1, ...</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>reddit</td>\n",
+       "      <td>Killing Hitler has become a sport amongst time...</td>\n",
+       "      <td>Dear POTUS , The future is amazing . After pea...</td>\n",
+       "      <td>[0.3432272970676422, -0.2167324721813202, 0.15...</td>\n",
+       "      <td>[-0.025556232780218124, 0.06068963184952736, -...</td>\n",
+       "      <td>[2.4253904819488525, -4.577791690826416, -3.37...</td>\n",
+       "      <td>[1.6201171875, -3.439453125, -1.546875, -1.0, ...</td>\n",
+       "      <td>[5, 5, 5, 3, 3, 1, 4, 1, 0, 1, 0, 0, 0, 2, 1, ...</td>\n",
+       "      <td>[3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>reddit</td>\n",
+       "      <td>Killing Hitler has become a sport amongst time...</td>\n",
+       "      <td>When doing this kind of stuff , it 's good to ...</td>\n",
+       "      <td>[-0.2912406027317047, 0.12030187994241714, 0.0...</td>\n",
+       "      <td>[-0.029593346640467644, 0.066276416182518, -0....</td>\n",
+       "      <td>[-1.9841090440750122, 0.004299342632293701, -2...</td>\n",
+       "      <td>[0.305908203125, 1.208984375, 3.591796875, -0....</td>\n",
+       "      <td>[7, 9, 3, 0, 5, 3, 6, 2, 0, 0, 0, 0, 1, 1, 3, ...</td>\n",
+       "      <td>[5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6195</th>\n",
+       "      <td>gemini</td>\n",
+       "      <td>To get in Heaven, you have to confront the per...</td>\n",
+       "      <td>In the hushed tranquility of the celestial rea...</td>\n",
+       "      <td>[-0.16426882147789001, 0.16457293927669525, -0...</td>\n",
+       "      <td>[-0.016211245208978653, 0.06866081804037094, -...</td>\n",
+       "      <td>[-1.8663527965545654, -3.4808688163757324, -2....</td>\n",
+       "      <td>[0.7861328125, -1.6962890625, 2.23828125, -0.7...</td>\n",
+       "      <td>[23, 11, 14, 9, 9, 6, 21, 7, 0, 5, 0, 4, 0, 6,...</td>\n",
+       "      <td>[9, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6196</th>\n",
+       "      <td>gemini</td>\n",
+       "      <td>To get in Heaven, you have to confront the per...</td>\n",
+       "      <td>As I arrived at the pearly gates of Heaven , m...</td>\n",
+       "      <td>[-0.11653857678174973, 0.3063790202140808, -0....</td>\n",
+       "      <td>[-0.025263268500566483, 0.057814307510852814, ...</td>\n",
+       "      <td>[-0.4610805809497833, -4.71753454208374, -3.81...</td>\n",
+       "      <td>[0.57470703125, -2.1953125, 0.9580078125, 0.04...</td>\n",
+       "      <td>[23, 16, 14, 7, 12, 6, 36, 3, 2, 3, 0, 2, 1, 5...</td>\n",
+       "      <td>[12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6197</th>\n",
+       "      <td>gemini</td>\n",
+       "      <td>To get in Heaven, you have to confront the per...</td>\n",
+       "      <td>In the ethereal realm , where clouds caressed ...</td>\n",
+       "      <td>[-0.1640430986881256, 0.024861453101038933, -0...</td>\n",
+       "      <td>[-0.024055898189544678, 0.08036021888256073, -...</td>\n",
+       "      <td>[-0.8870304822921753, -4.3331685066223145, 0.1...</td>\n",
+       "      <td>[0.7978515625, -2.126953125, 1.701171875, -1.2...</td>\n",
+       "      <td>[24, 8, 8, 16, 7, 11, 27, 13, 0, 4, 0, 4, 1, 8...</td>\n",
+       "      <td>[7, 3, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6198</th>\n",
+       "      <td>gemini</td>\n",
+       "      <td>To get in Heaven, you have to confront the per...</td>\n",
+       "      <td>In the ethereal realm of the afterlife , I sto...</td>\n",
+       "      <td>[-0.22200319170951843, 0.1660720556974411, -0....</td>\n",
+       "      <td>[-0.032017629593610764, 0.0817214846611023, -0...</td>\n",
+       "      <td>[-2.0494422912597656, -2.7628235816955566, -3....</td>\n",
+       "      <td>[0.80859375, -1.21875, 2.259765625, -2.2792968...</td>\n",
+       "      <td>[23, 10, 25, 14, 10, 12, 35, 10, 0, 3, 0, 4, 1...</td>\n",
+       "      <td>[10, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 2, 0,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6199</th>\n",
+       "      <td>gemini</td>\n",
+       "      <td>To get in Heaven, you have to confront the per...</td>\n",
+       "      <td>In the vast expanse of the afterlife , I found...</td>\n",
+       "      <td>[-0.17946678400039673, 0.16679276525974274, -0...</td>\n",
+       "      <td>[-0.03646324574947357, 0.08845417946577072, -0...</td>\n",
+       "      <td>[-2.2711148262023926, -5.962841987609863, 0.06...</td>\n",
+       "      <td>[0.86083984375, -1.9384765625, 2.318359375, -0...</td>\n",
+       "      <td>[22, 9, 14, 11, 5, 7, 39, 12, 0, 5, 0, 7, 4, 5...</td>\n",
+       "      <td>[5, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6200 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      author                                             prompt  \\\n",
+       "0     reddit  Killing Hitler has become a sport amongst time...   \n",
+       "1     reddit  Killing Hitler has become a sport amongst time...   \n",
+       "2     reddit  Killing Hitler has become a sport amongst time...   \n",
+       "3     reddit  Killing Hitler has become a sport amongst time...   \n",
+       "4     reddit  Killing Hitler has become a sport amongst time...   \n",
+       "...      ...                                                ...   \n",
+       "6195  gemini  To get in Heaven, you have to confront the per...   \n",
+       "6196  gemini  To get in Heaven, you have to confront the per...   \n",
+       "6197  gemini  To get in Heaven, you have to confront the per...   \n",
+       "6198  gemini  To get in Heaven, you have to confront the per...   \n",
+       "6199  gemini  To get in Heaven, you have to confront the per...   \n",
+       "\n",
+       "                                               response  \\\n",
+       "0     * Magnificient work ! Truly inspiring ! * Hein...   \n",
+       "1     Even by my standards this one took some work ....   \n",
+       "2     So , we can now time travel into the future . ...   \n",
+       "3     Dear POTUS , The future is amazing . After pea...   \n",
+       "4     When doing this kind of stuff , it 's good to ...   \n",
+       "...                                                 ...   \n",
+       "6195  In the hushed tranquility of the celestial rea...   \n",
+       "6196  As I arrived at the pearly gates of Heaven , m...   \n",
+       "6197  In the ethereal realm , where clouds caressed ...   \n",
+       "6198  In the ethereal realm of the afterlife , I sto...   \n",
+       "6199  In the vast expanse of the afterlife , I found...   \n",
+       "\n",
+       "                                                   bert  \\\n",
+       "0     [-0.006725453305989504, 0.23576399683952332, -...   \n",
+       "1     [0.07968071103096008, -0.020308567211031914, 0...   \n",
+       "2     [-0.12700289487838745, 0.3927253186702728, -0....   \n",
+       "3     [0.3432272970676422, -0.2167324721813202, 0.15...   \n",
+       "4     [-0.2912406027317047, 0.12030187994241714, 0.0...   \n",
+       "...                                                 ...   \n",
+       "6195  [-0.16426882147789001, 0.16457293927669525, -0...   \n",
+       "6196  [-0.11653857678174973, 0.3063790202140808, -0....   \n",
+       "6197  [-0.1640430986881256, 0.024861453101038933, -0...   \n",
+       "6198  [-0.22200319170951843, 0.1660720556974411, -0....   \n",
+       "6199  [-0.17946678400039673, 0.16679276525974274, -0...   \n",
+       "\n",
+       "                                                roberta  \\\n",
+       "0     [-0.04180792719125748, 0.040072135627269745, -...   \n",
+       "1     [-0.02620106004178524, 0.02632817253470421, -0...   \n",
+       "2     [-0.04244694486260414, 0.010937012732028961, -...   \n",
+       "3     [-0.025556232780218124, 0.06068963184952736, -...   \n",
+       "4     [-0.029593346640467644, 0.066276416182518, -0....   \n",
+       "...                                                 ...   \n",
+       "6195  [-0.016211245208978653, 0.06866081804037094, -...   \n",
+       "6196  [-0.025263268500566483, 0.057814307510852814, ...   \n",
+       "6197  [-0.024055898189544678, 0.08036021888256073, -...   \n",
+       "6198  [-0.032017629593610764, 0.0817214846611023, -0...   \n",
+       "6199  [-0.03646324574947357, 0.08845417946577072, -0...   \n",
+       "\n",
+       "                                                    opt  \\\n",
+       "0     [-0.7724277377128601, -1.4468441009521484, -3....   \n",
+       "1     [-0.11295819282531738, -1.027052640914917, -2....   \n",
+       "2     [-5.222697734832764, -2.8652701377868652, -3.3...   \n",
+       "3     [2.4253904819488525, -4.577791690826416, -3.37...   \n",
+       "4     [-1.9841090440750122, 0.004299342632293701, -2...   \n",
+       "...                                                 ...   \n",
+       "6195  [-1.8663527965545654, -3.4808688163757324, -2....   \n",
+       "6196  [-0.4610805809497833, -4.71753454208374, -3.81...   \n",
+       "6197  [-0.8870304822921753, -4.3331685066223145, 0.1...   \n",
+       "6198  [-2.0494422912597656, -2.7628235816955566, -3....   \n",
+       "6199  [-2.2711148262023926, -5.962841987609863, 0.06...   \n",
+       "\n",
+       "                                                  llama  \\\n",
+       "0     [2.265625, 0.82666015625, 0.69775390625, 0.782...   \n",
+       "1     [0.9736328125, -2.439453125, 1.4921875, -0.757...   \n",
+       "2     [0.06005859375, -1.708984375, -0.457275390625,...   \n",
+       "3     [1.6201171875, -3.439453125, -1.546875, -1.0, ...   \n",
+       "4     [0.305908203125, 1.208984375, 3.591796875, -0....   \n",
+       "...                                                 ...   \n",
+       "6195  [0.7861328125, -1.6962890625, 2.23828125, -0.7...   \n",
+       "6196  [0.57470703125, -2.1953125, 0.9580078125, 0.04...   \n",
+       "6197  [0.7978515625, -2.126953125, 1.701171875, -1.2...   \n",
+       "6198  [0.80859375, -1.21875, 2.259765625, -2.2792968...   \n",
+       "6199  [0.86083984375, -1.9384765625, 2.318359375, -0...   \n",
+       "\n",
+       "                                                 common  \\\n",
+       "0     [4, 3, 5, 1, 4, 3, 6, 0, 0, 0, 0, 1, 0, 1, 1, ...   \n",
+       "1     [8, 6, 6, 2, 4, 3, 7, 0, 0, 1, 0, 1, 0, 4, 2, ...   \n",
+       "2     [8, 5, 2, 2, 1, 3, 5, 2, 0, 2, 0, 0, 0, 3, 1, ...   \n",
+       "3     [5, 5, 5, 3, 3, 1, 4, 1, 0, 1, 0, 0, 0, 2, 1, ...   \n",
+       "4     [7, 9, 3, 0, 5, 3, 6, 2, 0, 0, 0, 0, 1, 1, 3, ...   \n",
+       "...                                                 ...   \n",
+       "6195  [23, 11, 14, 9, 9, 6, 21, 7, 0, 5, 0, 4, 0, 6,...   \n",
+       "6196  [23, 16, 14, 7, 12, 6, 36, 3, 2, 3, 0, 2, 1, 5...   \n",
+       "6197  [24, 8, 8, 16, 7, 11, 27, 13, 0, 4, 0, 4, 1, 8...   \n",
+       "6198  [23, 10, 25, 14, 10, 12, 35, 10, 0, 3, 0, 4, 1...   \n",
+       "6199  [22, 9, 14, 11, 5, 7, 39, 12, 0, 5, 0, 7, 4, 5...   \n",
+       "\n",
+       "                                               function  \n",
+       "0     [4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "1     [4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "2     [1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...  \n",
+       "3     [3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...  \n",
+       "4     [5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...  \n",
+       "...                                                 ...  \n",
+       "6195  [9, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...  \n",
+       "6196  [12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...  \n",
+       "6197  [7, 3, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...  \n",
+       "6198  [10, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 2, 0,...  \n",
+       "6199  [5, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...  \n",
+       "\n",
+       "[6200 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "\n",
     "df_gemini_llm = pd.read_csv(\"gemini_llm_vectors.csv\")\n",
-    "df_gemini_style = pd.read_csv(\"gemini_style_vectors.csv\")[\n",
-    "    [\"common_vectors\", \"function_vectors\"]\n",
-    "]\n",
-    "df_gemini_style.columns = [\"common\", \"function\"]\n",
+    "df_gemini_style = pd.read_csv(\"gemini_style_vectors.csv\")\n",
     "\n",
-    "df_gemini_combined = pd.concat([df_gemini_llm, df_gemini_style], axis=1)\n",
-    "df_gemini_combined[\"author\"] = \"gemini\"\n",
+    "df_gemini_style = df_gemini_style[[\"common\", \"function\"]]\n",
+    "df_gemini = pd.concat([df_gemini_llm, df_gemini_style], axis=1)\n",
+    "\n",
+    "df_gemini[\"author\"] = \"gemini\"\n",
     "\n",
     "df_without_gemini = pd.read_csv(\"data_without_gemini.csv\")\n",
-    "df_final = pd.concat([df_without_gemini, df_gemini_combined], ignore_index=True)\n",
+    "df_final = pd.concat([df_without_gemini, df_gemini], ignore_index=True)\n",
+    "df_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_final.to_csv(\"../data.csv\", index=False)"
    ]
   }
