figures for paper

--- a/collate_data/gemini.ipynb
+++ b/collate_data/gemini.ipynb
@@ -104,6 +104,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: replaced the first prompt with the second\n",
+    "\n",
+    "- Gemini: \"Respond to the following creative writing prompt: Thwarting infamous dictators has become a sport amongst time travelers. Points are awarded for creativity and difficulty. You are last year's champion, tell the story of how you won?\"\n",
+    "- Normal: \"Killing Hitler has become a sport amongst time travelers. Points are awarded for creativity and difficulty. You are last year's champion, how did you win?\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
