sample human prompts randomly

--- a/data.ipynb
+++ b/data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,25 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We use min(8, 9) = 8 prompts, so both corpuses have the same number of prompts\n",
+    "# We use 8 prompts, so both corpuses have the same number of prompts\n",
     "n_prompts = 8\n",
-    "# We use the longest n_samples_per_prompt samples for each prompt, measured by number of words\n",
+    "# We use a random n_samples_per_prompt samples for each prompt\n",
     "n_samples_per_prompt = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index_0 = np.concatenate([[\"prompt_id\", \"text\"], [\"bert\"] * 768])\n",
-    "index_1 = np.concatenate([[\"prompt_id\", \"text\"], [i for i in range(768)]])\n",
-    "index = pd.MultiIndex.from_arrays([index_0, index_1])"
    ]
   },
   {
@@ -53,32 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "pairs = []\n",
     "for name in [\"train\", \"test\", \"valid\"]:\n",
-    "    with open(\"reddit/writingPrompts/\" + name + \".wp_source\") as f_prompts:\n",
+    "    with open(\"reddit/original_data/\" + name + \".wp_source\") as f_prompts:\n",
     "        prompts = f_prompts.readlines()\n",
-    "    with open(\"reddit/writingPrompts/\" + name + \".wp_target\") as f_responses:\n",
+    "    with open(\"reddit/original_data/\" + name + \".wp_target\") as f_responses:\n",
     "        texts = f_responses.readlines()\n",
     "    assert len(prompts) == len(texts)\n",
     "    pairs.extend(list(zip(prompts, texts)))\n",
     "df_reddit = pd.DataFrame(pairs, columns=[\"prompt\", \"text\"])\n",
-    "df_reddit = df_reddit[~df_reddit[\"prompt\"].str.contains(\"hitler\", case=False)]\n",
     "df_reddit = df_reddit.drop_duplicates(subset=[\"text\"])\n",
+    "df_reddit = df_reddit[~df_reddit[\"prompt\"].str.contains(\"hitler\", case=False)]\n",
     "df_reddit = df_reddit[\n",
     "    df_reddit[\"prompt\"].isin(df_reddit[\"prompt\"].value_counts().index[:n_prompts])\n",
     "]\n",
     "df_reddit[\"prompt_id\"] = df_reddit[\"prompt\"].astype(\"category\").cat.codes\n",
     "\n",
-    "# Get the longest n_samples responses for each prompt\n",
-    "df_reddit[\"text_len\"] = df_reddit[\"text\"].apply(lambda x: len(str.split(x)))\n",
+    "# Sample n_samples_per_prompt samples for each prompt\n",
     "df_reddit = (\n",
     "    df_reddit.groupby(\"prompt_id\")\n",
-    "    .apply(lambda x: x.nlargest(n_samples_per_prompt, \"text_len\"), include_groups=False)\n",
-    "    .reset_index(level=0, drop=False)\n",
+    "    .apply(lambda x: x.sample(n_samples_per_prompt), include_groups=False)\n",
     "    .reset_index(drop=True)\n",
     ")\n",
     "\n",
@@ -92,12 +79,13 @@
     ")\n",
     "df_reddit[\"prompt\"] = df_reddit[\"prompt\"].str.split(\" \\]\", n=1).str[1].str.strip()\n",
     "df_reddit[\"prompt\"] = \"Prompt\\n\" + df_reddit[\"prompt\"]\n",
+    "df_reddit = df_reddit.sort_values(\"prompt\").reset_index(drop=True)\n",
     "df_reddit[\"prompt_id\"] = df_reddit[\"prompt\"].astype(\"category\").cat.codes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,18 +104,18 @@
     "\n",
     "df_reddit_prompts[\"prompt\"] = df_reddit_prompts[\"prompt\"].apply(modify_prompt)\n",
     "\n",
-    "df_reddit_prompts.to_csv(\"reddit_prompts.csv\", index=False)"
+    "df_reddit_prompts.to_csv(\"reddit/prompts.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_reddit = df_reddit[[\"prompt_id\", \"text\"]]\n",
     "df_reddit = df_reddit.sort_values(\"prompt_id\").reset_index(drop=True)\n",
-    "df_reddit.to_csv(\"reddit_responses/human.csv\", index=False)"
+    "df_reddit.to_csv(\"reddit/responses/human.csv\", index=False)"
    ]
   },
   {
@@ -154,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +236,7 @@
        "7          7  Write a response to the following creative wri...         WP"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -291,27 +279,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>`` We left them there to study ! '' Proclaimed...</td>\n",
+       "      <td>Doh'tlec reviewed his message . It did n't nee...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>“ I suggest we initiate protocol Zestraol ” &lt;n...</td>\n",
+       "      <td>We spoke to them in images . It was the only w...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>Our War Council was surprised when these Human...</td>\n",
+       "      <td>`` The Savage within… '' those three words see...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>`` Drax , the Slovians have taken E13-49e , 4t...</td>\n",
+       "      <td>It was a last resort . &lt;newline&gt; &lt;newline&gt; &lt;ne...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>`` They 've taken Marin , sir . '' &lt;newline&gt; &lt;...</td>\n",
+       "      <td>You ’ ll give us your ships . We ’ ll win your...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -321,27 +309,27 @@
        "    <tr>\n",
        "      <th>795</th>\n",
        "      <td>7</td>\n",
-       "      <td>I 'd see her walking down the hall , her hair ...</td>\n",
+       "      <td>In a sea of familiar faces just one pair of ey...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>796</th>\n",
        "      <td>7</td>\n",
-       "      <td>Wait . &lt;newline&gt; &lt;newline&gt; Doubt was settling ...</td>\n",
+       "      <td>Fair warning : This is a genuinely crap post ,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>797</th>\n",
        "      <td>7</td>\n",
-       "      <td>It started as a chauvinistic affair meant to m...</td>\n",
+       "      <td>She was his first . And as far as he knew he w...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>798</th>\n",
        "      <td>7</td>\n",
-       "      <td>Izzard stalked through the once slicked stone ...</td>\n",
+       "      <td>`` Ugh , I 'm gon na be sick . I think-I think...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799</th>\n",
        "      <td>7</td>\n",
-       "      <td>He said he loved her and he wanted her , so th...</td>\n",
+       "      <td>She said she loved him , and he saw her with h...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -350,22 +338,22 @@
       ],
       "text/plain": [
        "     prompt_id                                               text\n",
-       "0            0  `` We left them there to study ! '' Proclaimed...\n",
-       "1            0  “ I suggest we initiate protocol Zestraol ” <n...\n",
-       "2            0  Our War Council was surprised when these Human...\n",
-       "3            0  `` Drax , the Slovians have taken E13-49e , 4t...\n",
-       "4            0  `` They 've taken Marin , sir . '' <newline> <...\n",
+       "0            0  Doh'tlec reviewed his message . It did n't nee...\n",
+       "1            0  We spoke to them in images . It was the only w...\n",
+       "2            0  `` The Savage within… '' those three words see...\n",
+       "3            0  It was a last resort . <newline> <newline> <ne...\n",
+       "4            0  You ’ ll give us your ships . We ’ ll win your...\n",
        "..         ...                                                ...\n",
-       "795          7  I 'd see her walking down the hall , her hair ...\n",
-       "796          7  Wait . <newline> <newline> Doubt was settling ...\n",
-       "797          7  It started as a chauvinistic affair meant to m...\n",
-       "798          7  Izzard stalked through the once slicked stone ...\n",
-       "799          7  He said he loved her and he wanted her , so th...\n",
+       "795          7  In a sea of familiar faces just one pair of ey...\n",
+       "796          7  Fair warning : This is a genuinely crap post ,...\n",
+       "797          7  She was his first . And as far as he knew he w...\n",
+       "798          7  `` Ugh , I 'm gon na be sick . I think-I think...\n",
+       "799          7  She said she loved him , and he saw her with h...\n",
        "\n",
        "[800 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -390,17 +378,17 @@
      "data": {
       "text/plain": [
        "count     800.00000\n",
-       "mean      695.49625\n",
-       "std       514.91980\n",
-       "min       121.00000\n",
-       "25%       290.00000\n",
-       "50%       520.00000\n",
-       "75%       932.25000\n",
+       "mean      596.29875\n",
+       "std       492.29019\n",
+       "min       114.00000\n",
+       "25%       263.75000\n",
+       "50%       389.50000\n",
+       "75%       794.25000\n",
        "max      2594.00000\n",
        "Name: text, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,13 +409,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "hewlett_prompts_dir = \"hewlett/prompts\"\n",
+    "hewlett_prompts_dir = \"hewlett/original_data/prompts\"\n",
     "\n",
     "prompts = []\n",
     "for file in os.listdir(hewlett_prompts_dir):\n",
@@ -443,16 +431,16 @@
     "    {True: \"source dependent responses\", False: \"persuasive / narrative / expository\"}\n",
     ")\n",
     "df_hewlett_prompts = df_hewlett_prompts.sort_values(\"prompt_id\").reset_index(drop=True)\n",
-    "df_hewlett_prompts.to_csv(\"hewlett_prompts.csv\", index=False)"
+    "df_hewlett_prompts.to_csv(\"hewlett/prompts.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hewlett_dir = \"hewlett\"\n",
+    "hewlett_dir = \"hewlett/original_data\"\n",
     "\n",
     "filenames = [\n",
     "    \"training_set_rel3.tsv\",\n",
@@ -475,22 +463,21 @@
     "df_hewlett = df_hewlett.dropna()\n",
     "df_hewlett = df_hewlett.drop_duplicates()\n",
     "\n",
-    "# Get the longest n_samples responses for each prompt\n",
-    "df_hewlett[\"text_len\"] = df_hewlett[\"text\"].apply(lambda x: len(str.split(x)))\n",
+    "# Sample n_samples_per_prompt samples for each prompt\n",
     "df_hewlett = (\n",
     "    df_hewlett.groupby(\"prompt_id\")\n",
-    "    .apply(lambda x: x.nlargest(n_samples_per_prompt, \"text_len\"), include_groups=False)\n",
+    "    .apply(lambda x: x.sample(n_samples_per_prompt), include_groups=False)\n",
     "    .reset_index(level=0, drop=False)\n",
     "    .reset_index(drop=True)\n",
     ")\n",
     "df_hewlett = df_hewlett[[\"prompt_id\", \"text\"]]\n",
     "\n",
-    "df_hewlett.to_csv(\"hewlett_responses/human.csv\", index=False)"
+    "df_hewlett.to_csv(\"hewlett/responses/human.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +581,7 @@
        "7  persuasive / narrative / expository  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -637,27 +624,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>My standing postion on this cause is that comp...</td>\n",
+       "      <td>Well, in my opinion I feel that computers have...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>@ORGANIZATION1, @CAPS1? Are you there?\" \"@CAPS...</td>\n",
+       "      <td>Dear, Local Newspaper @CAPS1 here to inform yo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>Dear The @CAPS1 newspaper, @CAPS2 in front of ...</td>\n",
+       "      <td>The effects computers have on people vary from...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>Dear @CAPS1 Society: Computers are perhaps one...</td>\n",
+       "      <td>Dear @CAPS1, I agreed with the people that fee...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>Dear @ORGANIZATION1, The creation of computers...</td>\n",
+       "      <td>Dear newspaper, Some people say that computers...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -667,27 +654,27 @@
        "    <tr>\n",
        "      <th>795</th>\n",
        "      <td>7</td>\n",
-       "      <td>We couldn't control our selves, our eyes wate...</td>\n",
+       "      <td>In the story i am going to tell you, it invol...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>796</th>\n",
        "      <td>7</td>\n",
-       "      <td>It all started at the play ground @CAPS9 me ...</td>\n",
+       "      <td>I met my best friend @PERSON2 when we were in...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>797</th>\n",
        "      <td>7</td>\n",
-       "      <td>For my family laughter is important to us bec...</td>\n",
+       "      <td>Laughter is a common occurrence in my home. @...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>798</th>\n",
        "      <td>7</td>\n",
-       "      <td>Laughter, one of the greatest gifts in life. ...</td>\n",
+       "      <td>Having laughter in your life is a big part in...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799</th>\n",
        "      <td>7</td>\n",
-       "      <td>Why is it that people can look back at someth...</td>\n",
+       "      <td>It's said that laughter is the best medicine....</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -696,22 +683,22 @@
       ],
       "text/plain": [
        "     prompt_id                                               text\n",
-       "0            0  My standing postion on this cause is that comp...\n",
-       "1            0  @ORGANIZATION1, @CAPS1? Are you there?\" \"@CAPS...\n",
-       "2            0  Dear The @CAPS1 newspaper, @CAPS2 in front of ...\n",
-       "3            0  Dear @CAPS1 Society: Computers are perhaps one...\n",
-       "4            0  Dear @ORGANIZATION1, The creation of computers...\n",
+       "0            0  Well, in my opinion I feel that computers have...\n",
+       "1            0  Dear, Local Newspaper @CAPS1 here to inform yo...\n",
+       "2            0  The effects computers have on people vary from...\n",
+       "3            0  Dear @CAPS1, I agreed with the people that fee...\n",
+       "4            0  Dear newspaper, Some people say that computers...\n",
        "..         ...                                                ...\n",
-       "795          7   We couldn't control our selves, our eyes wate...\n",
-       "796          7    It all started at the play ground @CAPS9 me ...\n",
-       "797          7   For my family laughter is important to us bec...\n",
-       "798          7   Laughter, one of the greatest gifts in life. ...\n",
-       "799          7   Why is it that people can look back at someth...\n",
+       "795          7   In the story i am going to tell you, it invol...\n",
+       "796          7   I met my best friend @PERSON2 when we were in...\n",
+       "797          7   Laughter is a common occurrence in my home. @...\n",
+       "798          7   Having laughter in your life is a big part in...\n",
+       "799          7   It's said that laughter is the best medicine....\n",
        "\n",
        "[800 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
