--- a/data.ipynb
+++ b/data.ipynb
@@ -779,6 +779,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generation dates: \n",
+    "\n",
+    "June 2-3 for reddit temp=1.4\n",
+    "\n",
+    "April 25-27 for everything else"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
